--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -5,18 +5,21 @@
 }
 
 .contact-form-banner {
-  background-image: url("/src/assets/img/contact/wonder.jpg");
+  background-image: url("/public/assets/img/contactus1.jpg");
   background-size: cover;
-  background-position: center;
-  height: 250px;
+  /* background-position: center;  */
+  /* background-attachment: fixed; */
+  height: 450px;
   display: flex;
   align-items: center;
   justify-content: center;
+  /* object-fit: cover; */
 }
 
 .contact-form-banner-heading {
-  color: white;
-  font-size: 2.5rem;
+  color: rgb(19, 90, 177);
+  font-size: 120px;
+  font-style: oblique;
   font-weight: bold;
   text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
@@ -40,6 +43,7 @@
   min-width: 300px;
   max-width: 700px;
   height: 100%;
+  margin-top: 50px;
 }
 
 .contact-form-title {
@@ -74,10 +78,10 @@
 .contact-form-quickinfo {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.5rem;
   justify-content: center;
   font-size: 16px;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .contact-form-quickinfo a {
@@ -86,14 +90,14 @@
 
 .contact-form-form {
   background-color: rgba(255, 255, 255, 0.95);
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
 }
 
 .contact-form-submit {
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .contact-form-submit-button {
