--- a/src/pages/BodyLayout.css
+++ b/src/pages/BodyLayout.css
@@ -1,7 +1,7 @@
 .layout-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .layout-main {
