--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,3 +1,4 @@
+/* Layout & General */
 .login-container {
   height: 100vh;
   width: 100%;
@@ -16,6 +17,7 @@
   overflow: hidden;
   max-width: 900px;
   width: 100%;
+  flex-direction: row;
 }
 
 .login-left {
@@ -24,12 +26,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: 30px; */
 }
 
 .login-image {
   width: 100%;
-  /* max-width: 350px; */
   object-fit: contain;
 }
 
@@ -38,12 +38,14 @@
   padding: 50px;
 }
 
+/* Typography */
 .login-title {
   text-align: center;
   margin-bottom: 30px;
   color: #333;
 }
 
+/* Form elements */
 .login-input {
   height: 40px;
   border-radius: 8px;
@@ -76,4 +78,44 @@
   cursor: pointer;
   font-weight: 500;
   padding: 0;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+  .login-wrapper {
+    flex-direction: column;
+  }
+
+  .login-left,
+  .login-right {
+    flex: none;
+    width: 100%;
+  }
+
+  .login-right {
+    padding: 30px 20px;
+  }
+
+  .login-image {
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .login-right {
+    padding: 20px 15px;
+  }
+
+  .login-title {
+    font-size: 20px;
+  }
+
+  .login-button {
+    height: 36px;
+  }
+
+  .login-input {
+    height: 36px;
+  }
 }
